<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>

    <string name="app_name">Minerva\'s Library</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_exit">退出</string>
    <string name="menu_search">搜索书库</string>
    <string name="menu_qrcode">扫码推荐</string>
    <string name="login_email">帐号</string>
    <string name="login_password">密码</string>
    <string name="login_button">登录</string>
    <string name="login_forget_pwd">保存密码</string>
    <string name="login_email_hint">  Email Address</string>
    <string name="login_password_hint">  Password</string>
    <string name="login_help">贴心小提醒</string>
    <string name="login_help_second">2. 默认密码是 123456</string>
    <string name="login_help_first">1. 账号为公司邮箱地址</string>
    <string name="home_browser">浏览</string>
    <string name="home_recommand">推荐</string>
    <string name="home_borrow">借阅</string>
    <string name="login_failed">登录失败，请检查后重试</string>
    <string name="system_alert">系统提示</string>
    <string name="username_empty">用户名不能为空</string>
    <string name="password_empty">密码不能为空</string>
    <string name="login_alert">   系统登录中，请稍后...</string>
    <string name="home_reservation">预定</string>
    <string name="title_activity_recommend_detail">RecommendDetailActivity</string>
    <string name="loading_more">正在加载更多内容...</string>
    <string name="loading">加载中...</string>
    <string name="recommend_user">推荐人: </string>
    <string name="recommend_rate">推荐热度: </string>
    <string name="recommend_btn_title">推荐+1</string>
    <string name="qr_recommend_btn_title">确认推荐</string>
    <string name="qr_recommend_info">图书信息来自豆瓣API</string>
    <string name="loading_all">已经全部加载完毕</string>
    <string name="title_activity_book_detail">BookDetailActivity</string>
    <string name="title_activity_recent_borrow_and_booking">RecentBorrowAndBooking</string>
    <string name="recommend_already">您已经推荐过了</string>
    <string name="recommend_success">推荐成功</string>
    <string name="order_success">您已成功预订本书</string>
    <string name="order_fail">对不起，预订失败</string>
    <string name="borrow_success">您已成功借阅本书，请联系管理员领取。</string>
    <string name="borrow_fail">对不起，借阅本书失败</string>
    <string name="already_borrow">您已借阅过此书，无需重新借阅。</string>
    <string name="already_order">您已预订过此书，无需重新预订。</string>
    <string name="home_reserve">预定</string>
    <string name="reserve_user">预定人：</string>
    <string name="reserve_time">预订时间：</string>
    <string name="order_cancel_success">订单取消成功</string>
    <string name="order_cancel_fail">订单取消失败</string>
    <string name="borrow_date">借书日期：</string>
    <string name="due_date">应还日期：</string>
    <string name="title_activity_qrcode_camera_recommend">扫码推荐</string>
    <string name="action_settings">Settings</string>

</resources>
