<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/google_now_background_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/qr_recdetail_image"
            android:layout_width="106dp"
            android:layout_height="144dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/hello_world"
            android:scaleType="centerInside" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/qr_recdetail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:textColor="#333333"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/qr_recdetail_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:textColor="#777777"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:textColor="#777777"
                android:textSize="14sp"
                android:text="@string/qr_recommend_info"
                android:textStyle="italic" />

            <Button
                android:id="@+id/qr_recdetailBtn"
                android:layout_width="60dp"
                android:layout_height="24dp"
                android:background="@drawable/no_round_btn_plusone"
                android:text="@string/qr_recommend_btn_title"
                android:textColor="#FFFFFF"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/qr_recommend_detail_filte_line"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#3f9fe0"
        android:orientation="horizontal" >
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="2dip"
        android:layout_marginTop="3dip"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dip"
            android:layout_marginTop="5dip"
            android:orientation="vertical"
            android:paddingBottom="8dip"
            android:paddingLeft="5dip" >

            <TextView
                android:id="@+id/qr_recdetail_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dip"
                android:layout_marginTop="6dip"
                android:textColor="#777777" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>